230126 강의 내용 : 게시글 삭제(이미지 파일 삭제, 글 삭제) -- (댓글, 좋아요 같이 삭제)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,4 +3,6 @@ header {height:100px;}
 .logo {color:#000; font-weight: bold;}
 .logo:hover {color:#000; text-decoration: none;}
 .contents {min-height:500px;}
+#info {min-height:800px;}
+#user-top {height:300px;}
 footer {height:100px;}
