--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,4 +5,5 @@ header {height:100px;}
 .contents {min-height:500px;}
 #info {min-height:800px;}
 #user-top {height:300px;}
+#user-bottom {min-height:500px;}
 footer {height:100px;}
